# faux_code

./: .env.example  .gitignore  LICENSE  README.md  deep-research-report.md  pyproject.toml
backend/app/: main.py  router.py  settings.py  streaming.py
backend/app/agent/: __init__.py  loop.py
backend/app/api/: agents.py  chat.py  models.py  rag.py  settings.py  status.py  workspace.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/providers/: __init__.py  base.py  cerebras.py  gemini.py  groq.py  huggingface.py  ollama.py  openai_compat.py  openrouter.py  registry.py  vllm.py
backend/app/rag/: ingest.py  store.py
backend/app/sandbox/: __init__.py  subprocess_runner.py
backend/app/tools/: __init__.py  apply_patch.py  fs.py  git.py  python_tool.py  rag_tool.py  registry.py  shell.py  web_fetch.py  web_search.py
backend/tests/: test_agent_parser.py  test_new_tools.py  test_providers.py  test_smoke.py  test_tools.py
cli/faux_code/: __main__.py
docs/: architecture.md  runbooks.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/agent/: page.tsx
frontend/app/chat/: page.tsx
frontend/components/: AgentView.tsx  ApprovalModal.tsx  ChatView.tsx  DiffViewer.tsx  ExamplePrompts.tsx  FileTree.tsx  MessageBubble.tsx  ModelPicker.tsx  Sidebar.tsx  SystemPromptPicker.tsx  ToolEvent.tsx
frontend/lib/: api.ts
frontend/stores/: settingsStore.ts
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
infra/scripts/: dev.sh  install_ollama.sh  pull_models.sh
tests/evals/: run_evals.py  tasks.yaml
(+5 files in other folders)
